--- a/.github/workflows/upload-artfactv4.yaml
+++ b/.github/workflows/upload-artfactv4.yaml
@@ -29,9 +29,9 @@ jobs:
         with:
           name: upload-artifactv4
           pattern: upload-artifactv4-*
+          retention-days: 1
 
-
-  download:
+  download-with-merge:
     runs-on: ubuntu-latest
     needs: merge
     steps:
@@ -39,5 +39,18 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: upload-artifactv4
+
+      - run: tree .
+
+  download-with-merge-multiple:
+    runs-on: ubuntu-latest
+    needs: upload
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          path: upload-artifactv4
+          pattern: upload-artifactv4-*
+          merge-multiple: true
 
       - run: tree .
