--- a/.github/workflows/upload-artfactv4.yaml
+++ b/.github/workflows/upload-artfactv4.yaml
@@ -39,7 +39,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: upload-artifactv4
-
       - run: tree .
 
   download-with-merge-multiple:
@@ -52,5 +51,14 @@ jobs:
           path: upload-artifactv4
           pattern: upload-artifactv4-*
           merge-multiple: true
+      - run: tree .
 
+  download-with-v3:
+    runs-on: ubuntu-latest
+    needs: merge
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: upload-artifactv4
       - run: tree .
